<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="a_new_archive">A new archive</string>
    <string name="about_dev">- Development Team -</string>
    <string name="about_new">"- What's New -"</string>
    <string name="about_right">"Copyright 2015–2016 Trustlook Inc., 
 All Rights Reserved"</string>
    <string name="about_translation">- Translation &amp; Acknowledgements -</string>
    <string name="add_account">Add account</string>
    <string name="any_version_not_writable">"The directory you selected:
%s
is not writable!"</string>
    <string name="app_info">App Info</string>
    <string name="app_name">App Backup &amp; Restore</string>
    <string name="app_version">App Backup &amp; Restore v%s</string>
    <string name="apps">Apps</string>
    <string name="archive">Archived</string>
    <string name="ask_if_uninstall">Are you sure to uninstall %d selected App(s)?</string>
    <string name="attached">Attached</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="auto_backup_all_apps">Backup every installation update automatically</string>
    <string name="auto_backup_count_detail">Successfully Auto Backed up %d apps</string>
    <string name="auto_backup_notification">Auto Backup Notification</string>
    <string name="auto_backup_notification_summary">Turn on notifications for auto backup</string>
    <string name="auto_upload_drive_detail">Auto backup to Google Drive after regular backup</string>
    <string name="auto_upload_drive_title">Auto Upload to Google Drive</string>
    <string name="autobackup_list_summary">Set a list,schedule your Auto Backup</string>
    <string name="autobackup_list_title">Auto Backup apps on list</string>
    <string name="avg_transfer_speed">average transfer speed:</string>
    <string name="backed_up">Backed up</string>
    <string name="backup">Backup</string>
    <string name="backup_path">Backup Path :</string>
    <string name="backup_setting">Backup Settings</string>
    <string name="boost_transportation">Boost Transfer</string>
    <string name="boost_transportation_summary">Boost transfer speed for your device</string>
    <string name="break_free_support">Breakpoint Restart</string>
    <string name="break_free_support_summary">Resume file transfer from last starting point</string>
    <string name="bridge_personal">Personal</string>
    <string name="calls">Calls</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_delete">Cancel Delete</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="cancel_restore">Cancel Restore</string>
    <string name="cancel_scan">Are you sure you want to cancel scan?</string>
    <string name="cancel_sending">Cancel Sending</string>
    <string name="cancel_sending_msg">Your current connection will be LOST.Are you sure to interrupt sending?</string>
    <string name="cancel_upload">Cancel Upload</string>
    <string name="cancelled">Cancelled</string>
    <string name="change_backup_path_msg" formatted="false">"Are you sure to change backup path from:
%s
 to:
%s
"</string>
    <string name="change_backup_path_title">Change Backup Path</string>
    <string name="change_language_msg">Are you sure to change language to %s</string>
    <string name="change_language_title">Change language?</string>
    <string name="change_setting_fail">Change Settings Failed</string>
    <string name="check">Check</string>
    <string name="check_update">Check update</string>
    <string name="check_update_summary">( Current Version: %1$s )</string>
    <string name="checking">Checking …</string>
    <string name="clean_duplicate">Clean Duplicated</string>
    <string name="clean_duplicate_summary">Do you want to clean %d identical contacts?</string>
    <string name="close">Close</string>
    <string name="collecting_info">Collecting app info……</string>
    <string name="collecting_info_spe">Collecting info: %s</string>
    <string name="completed">Completed!</string>
    <string name="confirm">Confirm</string>
    <string name="conn_lost">Connection Lost</string>
    <string name="conn_lost_msg">Your current connection is LOST.</string>
    <string name="connecting_drive">Connecting to Google Drive</string>
    <string name="contacts">Contacts</string>
    <string name="contain_special_character">"%s
 contains special characters, please try again"</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="cp_to_clipboard">Copy</string>
    <string name="cped_to_clipboard">Copied to Clipboard!</string>
    <string name="current">Current</string>
    <string name="current_storage">Current Storage</string>
    <string name="date">Date:%1$s</string>
    <string name="date_item">Date:</string>
    <string name="delete_archived_apk_dialog_msg">Do you want to delete %d selected App(s)?</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_mail">Leave Your Suggestions</string>
    <string name="fragment_about">About</string>
    <string name="install">Install</string>
    <string name="installed">Installed</string>
    <string name="invite">Invite</string>
    <string name="invite_connect_abr">Invite your friends to connect to WiFi named :</string>
    <string name="invite_step1">STEP 1</string>
    <string name="invite_step2">STEP 2</string>
    <string name="invite_url">Ask your friends to enter the following URL into the browser:</string>
    <string name="latest_version">Latest version : %1$s</string>
    <string name="launch">Launch</string>
    <string name="pkg_name">PKG name:%1$s</string>
    <string name="receive">Receive</string>
    <string name="scan_virus">Scan Virus</string>
    <string name="search_app">Search in store</string>
    <string name="send">Send</string>
    <string name="set_as_auto_backup">Set as Auto Backup</string>
    <string name="settings">Settings</string>
    <string name="size">Size:</string>
    <string name="target_size">Target size : %1$s</string>
    <string name="title_use_wifi">Send App Backup &amp; Restore to Android devices without mobile charges.</string>
    <string name="uninstall">Uninstall</string>
    <string name="whats_new">"What's new"</string>
    <string name="scan_apk">Scan APK</string>
    <string name="cache_cleaner">Cache Cleaner</string>
    <string name="fragment_qa_abr">Backup &amp; Restore</string>
    <string name="fragment_qa_feature">Hidden Features &amp; Tips</string>
    <string name="fragment_qa_send">Send &amp; Receive</string>
    <string name="fragment_qa_setting">General &amp; Settings</string>
    <string name="recommend_mob">Recommend App</string>
    <string name="trustlook_antivirus">Trustlook Antivirus</string>
</resources>