<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:background="@color/white_seven" android:paddingLeft="33.0dip" android:paddingRight="33.0dip" android:paddingBottom="65.0dip" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <android.widget.TextView android:textSize="15.0sp" android:textColor="@color/black_40" android:gravity="center_horizontal" android:id="@id/wifi_text_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="29.0dip" android:layout_marginTop="21.0dip" android:layout_marginRight="29.0dip" android:layout_marginBottom="27.0dip" android:text="@string/title_use_wifi" />
            <android.widget.TextView android:textSize="15.0sp" android:textColor="@color/black_54" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/invite_step1" />
            <android.widget.TextView android:textSize="15.0sp" android:textColor="@color/black_54" android:id="@id/invite_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/invite_connect_abr" android:lineSpacingMultiplier="1.2" />
            <ImageView android:layout_width="fill_parent" android:layout_height="133.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip" android:src="@drawable/invite_which_wifi" />
            <android.widget.TextView android:textSize="15.0sp" android:textColor="@color/black_54" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/invite_step2" />
            <android.widget.TextView android:textSize="15.0sp" android:textColor="@color/black_54" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/invite_url" />
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="105.0dip" android:layout_marginTop="9.0dip" android:src="@drawable/icon_hotspot_address" />
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginTop="28.0dip" android:src="@drawable/invite_qr_code" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:paddingLeft="16.0dip" android:paddingTop="11.0dip" android:paddingRight="16.0dip" android:paddingBottom="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <include android:id="@id/back_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/bottom_button_view" />
    </LinearLayout>
</RelativeLayout>