<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="13.0dip" android:paddingTop="8.0dip" android:paddingRight="13.0dip" android:paddingBottom="23.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <android.widget.TextView android:textSize="16.0sp" android:textColor="@color/greyish_brown_2" android:id="@id/tv_latest_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/latest_version" />
    <android.widget.TextView android:textSize="16.0sp" android:textColor="@color/greyish_brown_2" android:id="@id/tv_target_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/target_size" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <View android:background="@color/warm_grey" android:layout_width="44.0dip" android:layout_height="1.0dip" />
        <android.widget.TextView android:textSize="16.0sp" android:textColor="@color/greyish_brown_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/whats_new" />
        <View android:background="@color/warm_grey" android:layout_width="44.0dip" android:layout_height="1.0dip" />
    </LinearLayout>
    <android.widget.TextView android:textSize="16.0sp" android:textColor="@color/greyish_brown_2" android:id="@id/tv_update_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" />
</LinearLayout>